- Fix permissions - Fix dark mode popover blink - Fix Firefox popover size flicker

--- a/pages/mini/mini.css
+++ b/pages/mini/mini.css
@@ -1,6 +1,4 @@
 body {
-	width: 602px;
-	height: 600px;
 	display: flex;
 	padding:0;
 	margin:0;
